--- a/DiceRoller/app/src/main/res/values/strings.xml
+++ b/DiceRoller/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DiceRoller</string>
+    <string name="roll">Roll</string>
+    <string name="dice">dice</string>
 </resources>
