--- a/android/ReplyClone/app/src/main/res/values/strings.xml
+++ b/android/ReplyClone/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Reply Clone</string>
+
+    <!--BottomAppBar-->
+    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
+    <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
+    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
+    <string name="fab_compose_email_content_description">Compose new email</string>
+    <string name="fab_reply_email_content_description">Reply to email</string>
+
+    <!--BottomNavigationDrawer-->
+    <string name="navigation_inbox">Inbox</string>
+    <string name="navigation_starred">Starred</string>
+    <string name="navigation_sent">Sent</string>
+    <string name="navigation_trash">Trash</string>
+    <string name="navigation_spam">Spam</string>
+    <string name="navigation_drafts">Drafts</string>
 </resources>
