--- a/android/Cupcake/app/src/main/res/values/strings.xml
+++ b/android/Cupcake/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="subtotal_price">Subtotal %s</string>
     <string name="total_price">Total %s</string>
     <string name="new_cupcake_order">New Cupcake Order</string>
-    <string name="order_details">Quantity: %1$s cupcakes \n Flavor: %2$s \nPickup date: %3$s \n
+    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
         Total: %4$s \n\n Thank you!</string>
 
     <string name="thursday">Thursday</string>
@@ -31,4 +31,9 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
     <string name="send_order">Send Order</string>
+    
+    <plurals name="cupcakes">
+        <item quantity="one">%d cupcake</item>>
+        <item quantity="two">$d cupcakes</item>
+    </plurals>
 </resources>
